<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckk2"
    android:orientation="vertical"
    tools:context=".ModeSettingsActivity">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="15dp"
       android:layout_marginHorizontal="20dp"
       android:background="@drawable/bck2"
       android:orientation="vertical">


      <TextView
          android:id="@+id/modeView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/modeView"
          android:textAlignment="center"
          android:textColor="#000000"
          android:textSize="35sp"
          android:textStyle="bold" />

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="150dp"
          android:background="@drawable/ic_settings" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:layout_marginTop="6dp"
          android:orientation="horizontal">

         <TextView
             android:id="@+id/modeView2"
             android:layout_width="111dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/mode"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold" />

         <Spinner
             android:id="@+id/modeSpinner"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"
             android:layout_marginHorizontal="40dp"
             android:layout_marginTop="5dp"
             android:background="#FFFF"
             android:entries="@array/modeItems"
             android:scrollbarSize="50dp"
             android:textAlignment="center"
             android:textSize="30sp"

             />


      </LinearLayout>


      <CheckBox
          android:id="@+id/checkBoxRsvpPlus"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:clickable="true"
          android:text="@string/rsvpPlus"
          android:visibility="gone" />

      <CheckBox
          android:id="@+id/checkBoxOptionX"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/optionX"
          android:visibility="gone" />


      <CheckBox
          android:id="@+id/checkBoxBlur"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Blur"
          android:visibility="gone" />

      <LinearLayout
          android:id="@+id/layoutNumOfWords"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:orientation="vertical"
          android:visibility="gone">

         <TextView
             android:id="@+id/numBarofWordsView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/numBarofWordsView"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/numOfWordsTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:padding="7dp"
             android:text="@string/minNumBar"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold" />

         <SeekBar
             android:id="@+id/seekBarNumOfWords"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:max="4"
             android:min="0"
             android:padding="5dp" />

      </LinearLayout>


      <LinearLayout
          android:id="@+id/layoutTimePerWord"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:orientation="vertical">

         <TextView
             android:id="@+id/timePerWordTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/velocidadView"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/timePerWordView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:padding="9dp"
             android:text="@string/minTimePerWord"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold" />

         <SeekBar
             android:id="@+id/seekBarTimePerWord"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:max="590"
             android:min="0"
             android:padding="2dp"
             android:thumbTint="#FF0000" />

         <TextView
             android:id="@+id/categoryView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="8dp"
             android:textColor="#000000"
             android:textSize="15sp" />

      </LinearLayout>


      <LinearLayout
          android:id="@+id/layoutForWindow"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:orientation="vertical"
          android:visibility="gone">

         <TextView
             android:id="@+id/numOfLettTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/numOfLettTextView"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/numOfWords"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:padding="9dp"
             android:text="@string/minNumOfWords"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold" />

         <SeekBar
             android:id="@+id/seekBarNumOfLetters"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:max="29"
             android:min="0"
             android:padding="5dp" />

         <TextView
             android:id="@+id/numOfJumpReserveTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/numOfJumpReserve"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/numOfJumpReserve"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:padding="9dp"
             android:text="@string/minNumOfJumpReserve"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="15sp"
             android:textStyle="bold" />


         <SeekBar
             android:id="@+id/seekBarNumOfJumpReserve"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:max="10"
             android:min="0"
             android:padding="5dp" />
      </LinearLayout>


      <Button
          android:id="@+id/playBtn"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:layout_marginHorizontal="70dp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="30dp"
          android:background="@drawable/button_green_light"
          android:onClick="onClickPlayBtn"
          android:text="@string/playBtn"
          android:textSize="20sp" />


   </LinearLayout>

   </ScrollView>
</LinearLayout>
