<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckk2"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/helloView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bck1"
        android:text="@string/helloText"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="289dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bck2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/zalogujView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/signIn"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/userView"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/usernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordView"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/passView"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"

                />
        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="70dp"
            android:background="#F2ED9D2A"
            android:onClick="onClickSignInBtn"
            android:text="@string/signInBtn"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bck2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/registerView"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60sp"

            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"
            android:background="#F2954903"
            android:onClick="onClickRegisterBtn"

            android:text="@string/signUpBtn"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>