<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckk2"
    android:orientation="vertical"
    tools:context=".ReadingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="394dp"
        android:layout_height="68dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="101dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="70px"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="89dp"
        android:onClick="startBtnClick"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stop_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/milliseconds"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="49dp"
        android:backgroundTint="#EAEAEA"
        android:ems="10"
        android:hint="time for 1 word in milliseconds"
        android:inputType="number" />

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:onClick="stopBtnClick"
        android:text="@string/stop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_btn"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</LinearLayout>